# ofono-voicecall-filter-plugin

./: .gitignore  CMakeLists.txt
rpm/: ofono-voicecall-filter-plugin.spec
src/: CMakeLists.txt  blocker.c  blocker.h  plugin.c
tests/: CMakeLists.txt  ofono.c  tst_blocker.c
